[package]
name = "fibnacci"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/poly000/fibonacci"
authors = ["poly000"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
rust-gmp = "0.5.0"
clap = { version = "3.2.20", features = ["derive"] }

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = true

